@@ -30,3 +30,4 @@ import(plyr)
 importFrom(Hmisc,"subplot")
 import(igraph)
 S3method(as.igraph, qgraph)
+importFrom(colorspace,rainbow_hcl)
