@@ -1,5 +1,8 @@
 Changes in Version 1.2.2
   o Using a matrix with relative positioning of nodes can now also be assigned characters of the node labels. e.g., assinging matrix(LETTERS[1:4],2,2) to 'layout' will place node labeled "A" at top left and "D" at bottom right.
+  o Added 'pastel' argument for pastel colors
+  o Added 'rainbowStart' argument to control the start of rainbow functions
+  o Node and edge labels can now be assigned using a list.
 
 Changes in Version 1.2.1
   o Curved edges can now be displayed as mostly straigth edges what run parallel. This can be done using the new argument 'curvePivot'. See documentation of 'qgraph' for more information.
